# whatis

./: .gitignore  LICENSE  README.md
whatis/: Cargo.toml  config.yaml  demo.yaml
whatis/rules/: PGP_public_key.yaml
whatis/src/: lib.rs  rule.rs  settings.rs
