[package]
name = "whatis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9"
anyhow = { version = "1.0", features = ["backtrace"] }
once_cell = "1.18.0"
regex = "1.8.4"
